git-svn-id: svn://svn.code.sf.net/p/indysoap/code-0/trunk@12 75be9796-0ac5-4f83-a77f-cba69ea37c88

--- a/packages/IdSoapXE3.dproj
+++ b/packages/IdSoapXE3.dproj
@@ -113,6 +113,7 @@
         <DCCReference Include="IndySystem.dcp"/>
         <DCCReference Include="IndyProtocols.dcp"/>
         <DCCReference Include="IndyCore.dcp"/>
+        <DCCReference Include="vcl.dcp"/>
         <DCCReference Include="IdSoapComponentRegistration.pas"/>
         <DCCReference Include="..\source\IdSoapIdeItiMaker.pas"/>
         <BuildConfiguration Include="Debug">
