Fix AnsiString bug, and allow for more interfaces
git-svn-id: svn://svn.code.sf.net/p/indysoap/code-0/trunk@17 75be9796-0ac5-4f83-a77f-cba69ea37c88

--- a/tests/SoapBuilders/Interop.cfg
+++ b/tests/SoapBuilders/Interop.cfg
@@ -1,5 +1,5 @@
 [Source]
-SoapBuilders/Interop.tmp
+SoapBuilders\Interop.tmp
 
 [Output]
-BinOutput=SoapBuilders/Interop.iti
+BinOutput=SoapBuilders\Interop.iti
