--- a/tests/WsdlSamples/Apache.cfg
+++ b/tests/WsdlSamples/Apache.cfg
@@ -1,5 +1,5 @@
 [Source]
-WsdlSamples/Apache.tmp
+WsdlSamples\Apache.tmp
 
 [Output]
-BinOutput=WsdlSamples/Apache.iti
+BinOutput=WsdlSamples\Apache.iti
