--- a/tests/WsdlSamples/DotNetDocLit.cfg
+++ b/tests/WsdlSamples/DotNetDocLit.cfg
@@ -1,5 +1,5 @@
 [Source]
-WsdlSamples/DotNetDocLit.tmp
+WsdlSamples\DotNetDocLit.tmp
 
 [Output]
-BinOutput=WsdlSamples/DotNetDocLit.iti
+BinOutput=WsdlSamples\DotNetDocLit.iti
