--- a/tests/WsdlSamples/GoogleSearch.cfg
+++ b/tests/WsdlSamples/GoogleSearch.cfg
@@ -1,5 +1,5 @@
 [Source]
-WsdlSamples/GoogleSearch.tmp
+WsdlSamples\GoogleSearch.tmp
 
 [Output]
-BinOutput=WsdlSamples/GoogleSearch.iti
+BinOutput=WsdlSamples\GoogleSearch.iti
