--- a/tests/WsdlSamples/INumToWords.cfg
+++ b/tests/WsdlSamples/INumToWords.cfg
@@ -1,5 +1,5 @@
 [Source]
-WsdlSamples/INumToWords.tmp
+WsdlSamples\INumToWords.tmp
 
 [Output]
-BinOutput=WsdlSamples/INumToWords.iti
+BinOutput=WsdlSamples\INumToWords.iti
