--- a/tests/WsdlSamples/Interop2GroupB.cfg
+++ b/tests/WsdlSamples/Interop2GroupB.cfg
@@ -1,5 +1,5 @@
 [Source]
-WsdlSamples/Interop2GroupB.tmp
+WsdlSamples\Interop2GroupB.tmp
 
 [Output]
-BinOutput=WsdlSamples/Interop2GroupB.iti
+BinOutput=WsdlSamples\Interop2GroupB.iti
