--- a/tests/WsdlSamples/LRIService-service.cfg
+++ b/tests/WsdlSamples/LRIService-service.cfg
@@ -1,5 +1,5 @@
 [Source]
-WsdlSamples/LRIService-service.tmp
+WsdlSamples\LRIService-service.tmp
 
 [Output]
-BinOutput=WsdlSamples/LRIService-service.iti
+BinOutput=WsdlSamples\LRIService-service.iti
