--- a/tests/WsdlSamples/ProxyHelloWorld.cfg
+++ b/tests/WsdlSamples/ProxyHelloWorld.cfg
@@ -1,5 +1,5 @@
 [Source]
-WsdlSamples/ProxyHelloWorld.tmp
+WsdlSamples\ProxyHelloWorld.tmp
 
 [Output]
-BinOutput=WsdlSamples/ProxyHelloWorld.iti
+BinOutput=WsdlSamples\ProxyHelloWorld.iti
