--- a/tests/IdSoapTestsI10.dproj
+++ b/tests/IdSoapTestsI10.dproj
@@ -71,7 +71,7 @@
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2_Win32)'!=''">
         <DCC_DebugDCUs>true</DCC_DebugDCUs>
-        <Debugger_CWD>C:\HL7Connect\v2\Library\Core\IndySoap\dunit</Debugger_CWD>
+        <Debugger_CWD>C:\HL7Connect\indysoap\tests</Debugger_CWD>
         <ILINK_FullDebugInfo>true</ILINK_FullDebugInfo>
         <BCC_DebugLineNumbers>true</BCC_DebugLineNumbers>
         <DCC_DebugInfoInExe>true</DCC_DebugInfoInExe>
