--- a/tools/wizard/IdSoapTools.dproj
+++ b/tools/wizard/IdSoapTools.dproj
@@ -101,6 +101,7 @@
         <DCCReference Include="IdSoapAbout.pas">
             <Form>IndySoapToolsAbout</Form>
         </DCCReference>
+        <DCCReference Include="..\..\source\IdSoapResourceFile.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
