improve: tools: IdSoapTools: do not show main form in a batch mode
Main form is blinking when "-g" option is set. Let's avoid this.

--- a/tools/wizard/IdSoapTools.dproj
+++ b/tools/wizard/IdSoapTools.dproj
@@ -95,6 +95,7 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
+        <DCCReference Include="IdSoapToolsCmdLine.pas"/>
         <DCCReference Include="IdSoapToolsForm.pas">
             <Form>IndySoapToolsForm</Form>
         </DCCReference>
