improve: IdSoapTools: make it console application
Detach console when run in GUI (without "-g" option).
As a consequence print error message to console when run with "-g"
option.

--- a/tools/wizard/IdSoapTools.dproj
+++ b/tools/wizard/IdSoapTools.dproj
@@ -81,6 +81,7 @@
         <DCC_Define>DEBUG;$(DCC_Define)</DCC_Define>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2_Win32)'!=''">
+        <DCC_ConsoleTarget>true</DCC_ConsoleTarget>
         <DCC_Alignment>2</DCC_Alignment>
         <DCC_PentiumSafeDivide>true</DCC_PentiumSafeDivide>
         <DCC_RunTimeTypeInfo>true</DCC_RunTimeTypeInfo>
